--- a/src/pages/ProductDetailPage/ProductDetailPage.module.css
+++ b/src/pages/ProductDetailPage/ProductDetailPage.module.css
@@ -350,12 +350,23 @@
   .productSection {
     align-items: center;
     grid-template-columns: 1fr 1.5fr;
-    max-width: 1300px;
+    max-width: 1400px;
   }
   .backLink {
     font-size: 1.5rem;
     align-self: flex-end;
-    margin-right: calc((100% - 1300px) / 2);
+    margin-right: calc((100% - 1400px) / 2);
+  }
+}
+
+@media (min-width: 1200px) and (max-width: 1799px) {
+  .backLink {
+    font-size: 1.2rem;
+    align-self: flex-end;
+    margin-left: 0;
+  }
+  .page {
+    max-width: 1000px;
   }
 }
 
@@ -363,10 +374,12 @@
   .relatedGrid {
     grid-template-columns: repeat(3, 1fr);
   }
-}
-
-@media (min-width: 1024px and max-width: 1200px) {
-  .productSection {
+  .backLink {
+    font-size: 1.2rem;
+    align-self: flex-end;
+    margin-left: 0;
+  }
+  .page {
     max-width: 900px;
   }
 }
