--- a/src/components/ProductCard/ProductCard.module.css
+++ b/src/components/ProductCard/ProductCard.module.css
@@ -159,17 +159,22 @@
 }
 
 .quantityButton:hover {
-  background-color: color-mix(in srgb, var(--primary-color) 12%, transparent);
+  /* background-color: color-mix(in srgb, var(--primary-color) 12%, transparent); */
+  background-color: transparent;
   color: var(--primary-color);
+  box-shadow: none;
+  transform: translateY(0px);
+  scale: 1.3;
 }
 
 .quantityButton:focus {
-  outline: 2px solid color-mix(in srgb, var(--primary-color) 50%, transparent);
-  outline-offset: -2px;
+  /* outline: 2px solid color-mix(in srgb, var(--primary-color) 50%, transparent); */
+  outline: transparent;
+  outline-offset: 0px;
 }
 
 .quantityButton:active {
-  background-color: color-mix(in srgb, var(--primary-color) 20%, transparent);
+  background-color: color-mix(in srgb, var(--primary-color) 10%, transparent);
   transform: scale(0.95);
 }
 
