--- a/src/pages/ProductDetailPage/ProductDetailPage.module.css
+++ b/src/pages/ProductDetailPage/ProductDetailPage.module.css
@@ -213,17 +213,22 @@
 }
 
 .quantityButton:hover {
-  background-color: color-mix(in srgb, var(--primary-color) 12%, transparent);
+  /* background-color: color-mix(in srgb, var(--primary-color) 12%, transparent); */
+  background-color: transparent;
   color: var(--primary-color);
+  box-shadow: none;
+  transform: translateY(0px);
+  scale: 1.3;
 }
 
 .quantityButton:focus {
-  outline: 2px solid color-mix(in srgb, var(--primary-color) 50%, transparent);
-  outline-offset: -2px;
+  /* outline: 2px solid color-mix(in srgb, var(--primary-color) 50%, transparent); */
+  outline: transparent;
+  outline-offset: 0px;
 }
 
 .quantityButton:active {
-  background-color: color-mix(in srgb, var(--primary-color) 20%, transparent);
+  background-color: color-mix(in srgb, var(--primary-color) 10%, transparent);
   transform: scale(0.95);
 }
 
@@ -366,7 +371,7 @@
     margin-left: 0;
   }
   .page {
-    max-width: 1000px;
+    max-width: 1050px;
   }
 }
 
