--- a/src/pages/HomePage/HomePage.module.css
+++ b/src/pages/HomePage/HomePage.module.css
@@ -4,7 +4,7 @@
   align-items: center;
   justify-content: center;
   text-align: center;
-  min-height: calc(100vh - 150px);
+  min-height: 100%;
   padding: 2rem;
   position: relative;
   overflow: hidden;
@@ -182,6 +182,31 @@
     color-mix(in srgb, var(--primary-color) 6%, transparent) 40%,
     transparent 70%
   );
+}
+
+.homepageFooter {
+  position: absolute;
+  bottom: 1.2rem;
+  right: 1rem;
+}
+
+.githubLink {
+  color: var(--text-color);
+  transition: font-size 0.1s ease;
+}
+
+.githubLink:visited {
+  color: var(--text-color);
+}
+
+.githubLink:hover {
+  font-size: 1.3rem;
+  color: var(--primary-color);
+}
+
+.githubLink:active {
+  font-size: 1rem;
+  color: var(--text-color);
 }
 
 /* Keyframe animations */
